--- a/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.scss
@@ -49,5 +49,23 @@
         }
       }
     }
+    .noActivityData {
+      text-align: center;
+      color: rgba(0, 0, 0, 0.1);
+      width: 100%;
+      background: #fff;
+      padding: 30px;
+      border-radius: 5px;
+      border: 1px solid #dcdcdc;
+      h1 {
+        margin-top: 30px;
+      }
+      i {
+        font-size: 16em;
+        margin: 4vh 0 6vh;
+        color: rgba(0, 0, 0, 0.04);
+      }
+      width: 100%;
+    }
   }
 }
