--- a/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.css
+++ b/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.css
@@ -45,9 +45,10 @@
     color: rgba(0, 0, 0, 0.1);
     width: 100%;
     background: #fff;
-    padding: 30px;
+    padding-top: 30px;
     border-radius: 5px;
     border: 1px solid #dcdcdc;
+    height: 68vh;
     width: 100%; }
     .ActivityFeedScreen .activity-feed .noActivityData h1 {
       margin-top: 30px; }
