--- a/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.scss
@@ -54,9 +54,10 @@
       color: rgba(0, 0, 0, 0.1);
       width: 100%;
       background: #fff;
-      padding: 30px;
+      padding-top: 30px;
       border-radius: 5px;
       border: 1px solid #dcdcdc;
+      height: 68vh;
       h1 {
         margin-top: 30px;
       }
