--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -9,6 +9,23 @@
     display: inline;
   }
 }
+.multiInfoList {
+  margin-left: -15px;
+  margin-right: -15px;
+  padding: 0 15px;
+  h5 {
+    font-size: 1rem;
+    margin: 0;
+  }
+  h6 {
+    font-size: 0.8rem;
+    margin: 0;
+  }
+  p {
+    font-size: 0.7rem;
+    margin: 0;
+  }
+}
 .ReactTable {
   .rt-thead {
     .rt-th {
