UI Tweak, added Change Password in Self Service

--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
@@ -34,15 +34,14 @@
 
   .Paper {
     background: #fff;
-    min-height: 35vh;
+    // min-height: 35vh;
     border: 1px solid #d3d3d3;
     padding: 15px;
-    border-radius:5px;
+    border-radius: 5px;
   }
 
   th,
   td {
-    
     border-right: 1px solid #e6e6e6;
   }
 }
