--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -705,6 +705,14 @@ body {
     padding-top: 6px;
     right: 0;
   }
+  .style_Label + h4 {
+    font-size: 1.5em;
+    margin-top: 3px;
+    margin-bottom: 7px;
+  }
+  .style_Label + h6 {
+    font-size: 1.1em;
+  }
 }
 
 label {
