--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -192,7 +192,10 @@
     border-radius: 0.28571429rem;
   }
   .results {
+    max-height: 40vh;
     margin-top: 0;
     width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 }
