--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -93,6 +93,12 @@
     cursor: pointer;
   }
 
+  .time_cell_disable {
+    background: #f9f9f9 !important;
+    border: none !important;
+    pointer-events: none;
+  }
+
   .editAction {
     position: relative;
     //z-index: 9999;
