small css changes

--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -96,6 +96,7 @@
   .time_cell_disable {
     background: #f9f9f9 !important;
     border: none !important;
+    cursor: none;
     pointer-events: none;
   }
 
