--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.css
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.css
@@ -76,6 +76,7 @@
 .EmpShiftRost_Screen .time_cell_disable {
   background: #f9f9f9 !important;
   border: none !important;
+  cursor: none;
   pointer-events: none; }
 
 .EmpShiftRost_Screen .editAction {
