--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -138,7 +138,15 @@
       .dayTypeCntr {
         height: 0.3rem;
         padding-right: 0;
-
+        .projectName {
+          text-align: center;
+          display: inline-block;
+          position: absolute;
+          top: -2px;
+          background: rgba(0, 0, 0, 0.7);
+          right: 30px;
+          color: #fff;
+        }
         .progress {
           margin-top: 5px;
           height: 0.5rem;
@@ -156,9 +164,9 @@
           span {
             color: #fff;
             font-size: 0.8em;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.9);
             position: absolute;
-            z-index: 9;
+            z-index: 99;
             top: 22px;
             padding: 2px 5px;
             border-radius: 5px;
