Project Roster Changes and Fixes

--- a/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.css
+++ b/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.css
@@ -65,6 +65,7 @@
   background-color: #58b9c0; }
 
 .EmployeeProjectRoster #projectRosterTable {
+  min-height: 54vh;
   overflow: auto;
   border: 1px solid #d2d2d2; }
   .EmployeeProjectRoster #projectRosterTable .noTimeSheetData {
@@ -82,7 +83,7 @@
     box-sizing: border-box;
     table-layout: fixed;
     min-height: 20vh;
-    max-height: 55vh; }
+    max-height: 52vh; }
     .EmployeeProjectRoster #projectRosterTable table thead th {
       padding: 3px;
       text-align: center;
@@ -90,12 +91,15 @@
       border-bottom: 1px solid #d2d2d2;
       color: #000 !important;
       background: #dff6f6 !important;
-      width: 55px; }
+      width: 45px;
+      font-size: 0.7em; }
       .EmployeeProjectRoster #projectRosterTable table thead th:nth-child(1) {
         text-align: left;
-        width: 200px; }
+        width: 200px;
+        font-size: 1em; }
       .EmployeeProjectRoster #projectRosterTable table thead th:last-child, .EmployeeProjectRoster #projectRosterTable table thead th:nth-last-child(2) {
-        width: 100px; }
+        width: 100px;
+        font-size: 1em; }
     .EmployeeProjectRoster #projectRosterTable table tbody {
       overflow: auto;
       min-height: 60vh;
@@ -105,7 +109,8 @@
         text-align: center;
         border-right: 1px solid #ececec;
         border-top: 1px solid #ececec;
-        width: 75px; }
+        width: 45px;
+        font-size: 0.8em; }
         .EmployeeProjectRoster #projectRosterTable table tbody tr td:nth-child(1) {
           text-align: left;
           width: 200px; }
