--- a/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
+++ b/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
@@ -83,6 +83,7 @@
   }
 
   #projectRosterTable {
+    min-height: 54vh;
     .noTimeSheetData {
       text-align: center;
       color: rgba(0, 0, 0, 0.1);
@@ -104,49 +105,42 @@
       box-sizing: border-box;
       table-layout: fixed;
       min-height: 20vh;
-      max-height: 55vh;
+      max-height: 52vh;
       thead {
         th {
-          //			display: table-cell;
           padding: 3px;
           text-align: center;
           border-right: 1px solid rgb(199, 224, 224);
           border-bottom: 1px solid #d2d2d2;
           color: #000 !important;
           background: #dff6f6 !important;
-          width: 55px;
-          // &:nth-child(1) {
-          //   text-align: center;
-          //   width: 120px;
+          width: 45px; // changed from 75px to 55px to make it compact
+          font-size: 0.7em;
           // }
           &:nth-child(1) {
             text-align: left;
             width: 200px;
+            font-size: 1em;
           }
           &:last-child,
           &:nth-last-child(2) {
             width: 100px;
+            font-size: 1em;
           }
         }
       }
       tbody {
-        //	display: block;
         overflow: auto;
         min-height: 60vh;
         max-height: 60vh;
         tr {
-          //	display: table-cell;
           td {
-            //	display: block;
             padding: 3px;
             text-align: center;
             border-right: 1px solid #ececec;
             border-top: 1px solid #ececec;
-            width: 75px;
-            // &:nth-child(1) {
-            //   text-align: center;
-            //   width: 120px;
-            // }
+            width: 45px;
+            font-size: 0.8em;
             &:nth-child(1) {
               text-align: left;
               width: 200px;
@@ -165,5 +159,87 @@
         }
       }
     }
+    // .noTimeSheetData {
+    //   text-align: center;
+    //   color: rgba(0, 0, 0, 0.1);
+    //   h1 {
+    //     margin-top: 30px;
+    //   }
+    //   i {
+    //     font-size: 16em;
+    //     margin: 4vh 0 6vh;
+    //     color: rgba(0, 0, 0, 0.04);
+    //   }
+    //   width: 100%;
+    // }
+
+    // overflow: auto;
+    // border: 1px solid #d2d2d2;
+    // table {
+    //   width: 100%;
+    //   box-sizing: border-box;
+    //   table-layout: fixed;
+    //   min-height: 20vh;
+    //   max-height: 55vh;
+    //   thead {
+    //     th {
+    //       //			display: table-cell;
+    //       padding: 3px;
+    //       text-align: center;
+    //       border-right: 1px solid rgb(199, 224, 224);
+    //       border-bottom: 1px solid #d2d2d2;
+    //       color: #000 !important;
+    //       background: #dff6f6 !important;
+    //       width: 45px;
+    //       // &:nth-child(1) {
+    //       //   text-align: center;
+    //       //   width: 120px;
+    //       // }
+    //       &:nth-child(1) {
+    //         text-align: left;
+    //         width: 200px;
+    //       }
+    //       &:last-child,
+    //       &:nth-last-child(2) {
+    //         width: 100px;
+    //       }
+    //     }
+    //   }
+    //   tbody {
+    //     //	display: block;
+    //     overflow: auto;
+    //     min-height: 60vh;
+    //     max-height: 60vh;
+    //     tr {
+    //       //	display: table-cell;
+    //       td {
+    //         //	display: block;
+    //         padding: 3px;
+    //         text-align: center;
+    //         border-right: 1px solid #ececec;
+    //         border-top: 1px solid #ececec;
+    //         width: 75px;
+    //         // &:nth-child(1) {
+    //         //   text-align: center;
+    //         //   width: 120px;
+    //         // }
+    //         &:nth-child(1) {
+    //           text-align: left;
+    //           width: 200px;
+    //         }
+    //         &:last-child,
+    //         &:nth-last-child(2) {
+    //           width: 100px;
+    //         }
+    //       }
+    //       &:nth-child(odd) {
+    //         background: #f2f2f2;
+    //       }
+    //       &:nth-child(even) {
+    //         background: #fff;
+    //       }
+    //     }
+    //   }
+    // }
   }
 }
