--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -430,7 +430,7 @@ header {
   border: 1px solid lighten($color-black, 40%) !important;
   left: 35vw;
   top: 15vh;
-  display: none;
+  // display: none;
   h4 {
     border-bottom: 1px solid darken($primary-color, 20%) !important;
     padding-bottom: 15px;
