--- a/client/src/Components/PayrollManagement/WPS/WPS.scss
+++ b/client/src/Components/PayrollManagement/WPS/WPS.scss
@@ -1,7 +1,7 @@
-.wps_Screen{
-    #WPSGrid_Cntr{
-        .ReactTable{
-            max-height: 65vh!important
-        }
+.wps_Screen {
+  #WPSGrid_Cntr {
+    .ReactTable {
+      max-height: 62vh !important;
     }
+  }
 }
