--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -90,7 +90,7 @@
     margin-left: 15px; }
   .loginTopbar .productLogo {
     float: right;
-    background: url(../../assets/svg/HIMS_LOGO.svg) no-repeat center;
+    background: url(../../assets/svg/HRMS_Logo.svg) no-repeat center;
     height: 70px;
     background-size: 100%;
     width: 100px;
