Employee master, project Roster and option issues, functionalities done

--- a/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
+++ b/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
@@ -126,6 +126,7 @@
         text-align: left;
         background: #fff;
         border-bottom: 1px solid #ccc;
+        color: black;
         &:hover {
           background-color: #f2f2f2;
         }
