--- a/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.css
+++ b/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.css
@@ -103,7 +103,8 @@
       padding: 5px 10px;
       text-align: left;
       background: #fff;
-      border-bottom: 1px solid #ccc; }
+      border-bottom: 1px solid #ccc;
+      color: black; }
       .EmployeeProjectRoster .editAction ul li:hover {
         background-color: #f2f2f2; }
       .EmployeeProjectRoster .editAction ul li::last-child {
