Updated Monthly Attendance Detail

--- a/client/src/Components/BusinessSetup/business_setup.css
+++ b/client/src/Components/BusinessSetup/business_setup.css
@@ -1,3 +1,6 @@
+.business_setup .tabMaster {
+  margin-bottom: 15px; }
+
 .business_setup .business-section {
   background: #fff;
   border-radius: 5px;
