--- a/client/src/Components/BusinessSetup/business_setup.scss
+++ b/client/src/Components/BusinessSetup/business_setup.scss
@@ -1,4 +1,7 @@
 .business_setup {
+  .tabMaster {
+    margin-bottom: 15px;
+  }
   // background: #f2f2f2;
   .business-section {
     background: #fff;
