--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -27,7 +27,8 @@
   //Reports Styles
   .print-body {
     border-right: 0 !important;
-    max-height: 70vh;
+    max-height: 68vh;
+    // min-height: 65vh;
     overflow: auto;
     padding: 0 15px 0 !important;
     margin-bottom: 10px;
