--- a/client/src/Reports/report-style.css
+++ b/client/src/Reports/report-style.css
@@ -1,39 +1,35 @@
-.reportFixedTable {
-  width: 100%;
-  table-layout: fixed; }
-
-.tbl-header {
-  background-color: rgba(255, 255, 255, 0.3); }
-
 .tbl-content {
-  height: 300px;
+  height: 35vh;
   overflow-x: auto;
   margin-top: 0px;
-  border: 1px solid rgba(255, 255, 255, 0.3); }
+  border: 1px solid #f2f2f2 !important; }
 
-th {
-  padding: 20px 15px;
-  text-align: left;
-  font-weight: 500;
-  font-size: 12px;
-  color: #fff;
-  text-transform: uppercase; }
-
-td {
-  padding: 15px;
-  text-align: left;
-  vertical-align: middle;
-  font-weight: 300;
-  font-size: 12px;
-  color: #fff;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.1); }
-
-/* for custom scrollbar for webkit browser*/
-::-webkit-scrollbar {
-  width: 6px; }
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
-
-::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
+.reportFixedTable {
+  width: 100%;
+  table-layout: fixed;
+  /* for custom scrollbar for webkit browser*/ }
+  .reportFixedTable th {
+    padding: 5px 15px;
+    vertical-align: middle;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #000 !important;
+    background: #d2faf4 !important;
+    border-bottom: 1px solid #17d0b5 !important;
+    text-transform: uppercase; }
+  .reportFixedTable tr:nth-child(even) {
+    background: #f2f2f2 !important; }
+  .reportFixedTable td {
+    padding: 5px 15px;
+    text-align: left;
+    vertical-align: middle;
+    font-size: 1rem;
+    color: #666666 !important;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.1); }
+  .reportFixedTable ::-webkit-scrollbar {
+    width: 6px; }
+  .reportFixedTable ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
+  .reportFixedTable ::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
