--- a/client/src/Reports/report-style.scss
+++ b/client/src/Reports/report-style.scss
@@ -1,48 +1,52 @@
+@import "../styles/algaehCssVariables.scss";
+
+.tbl-content {
+  height: 35vh;
+  overflow-x: auto;
+  margin-top: 0px;
+  border: 1px solid lighten($color-black, 95%) !important;
+}
+
 .reportFixedTable {
   width: 100%;
   table-layout: fixed;
-}
 
-.tbl-header {
-  background-color: rgba(255, 255, 255, 0.3);
-}
+  th {
+    padding: 5px 15px;
+    vertical-align: middle;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #000 !important;
+    background: lighten($primary-color, 55%) !important;
+    border-bottom: 1px solid lighten($primary-color, 10%) !important;
+    text-transform: uppercase;
+  }
+  tr {
+    &:nth-child(even) {
+      background: lighten($color-black, 95%) !important;
+    }
+  }
+  td {
+    padding: 5px 15px;
+    text-align: left;
+    vertical-align: middle;
+    font-size: 1rem;
+    color: lighten($color-black, 40%) !important;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+  }
 
-.tbl-content {
-  height: 300px;
-  overflow-x: auto;
-  margin-top: 0px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-}
+  /* for custom scrollbar for webkit browser*/
 
-th {
-  padding: 20px 15px;
-  text-align: left;
-  font-weight: 500;
-  font-size: 12px;
-  color: #fff;
-  text-transform: uppercase;
-}
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
 
-td {
-  padding: 15px;
-  text-align: left;
-  vertical-align: middle;
-  font-weight: 300;
-  font-size: 12px;
-  color: #fff;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-}
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
 
-/* for custom scrollbar for webkit browser*/
-
-::-webkit-scrollbar {
-  width: 6px;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  ::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
 }
