--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1155,6 +1155,9 @@
       line-height: 70px;
       color: #ccc;
       text-align: center;
+      background: url("../src/assets/images/hospital_logo_reports.webp")
+        no-repeat center;
+      background-size: 100%;
     }
     .hospitalAddress {
       width: 250px;
