--- a/client/src/Components/PackageSetup/PackageSetup.scss
+++ b/client/src/Components/PackageSetup/PackageSetup.scss
@@ -26,8 +26,8 @@
     height: 43vh !important;
   }
 }
-#packageGridCntr {
+#packagesGridCntr {
   .ReactTable {
-    max-height: 80vh !important;
+    max-height: 75vh !important;
   }
 }
