--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -53,38 +53,56 @@
       line-height: 1.2rem; }
     .patientProfile .patientInfo-Top .patientName p {
       margin: 0;
-      padding: 0; }
+      padding: 0;
+      font-size: 0.9em;
+      font-weight: 700; }
   .patientProfile .patientInfo-Top .patientDemographic {
-    line-height: 1.3rem;
+    line-height: 1.4rem;
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
-    padding-right: 10px;
-    min-height: 57px; }
+    padding-right: 10px; }
     .patientProfile .patientInfo-Top .patientDemographic span {
+      font-size: 0.9em;
+      font-weight: 700;
       display: block; }
+      .patientProfile .patientInfo-Top .patientDemographic span i {
+        text-align: center;
+        width: 20px; }
       .patientProfile .patientInfo-Top .patientDemographic span b {
-        color: #34b8bc; }
+        color: #12a28d; }
   .patientProfile .patientInfo-Top .patientHospitalDetail {
-    line-height: 1.3rem;
+    line-height: 1.4rem;
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
     padding-right: 10px;
     min-height: 57px; }
     .patientProfile .patientInfo-Top .patientHospitalDetail span {
+      font-size: 0.9em;
+      font-weight: 700;
       display: block; }
+      .patientProfile .patientInfo-Top .patientHospitalDetail span i {
+        text-align: center;
+        width: 20px; }
       .patientProfile .patientInfo-Top .patientHospitalDetail span b {
-        color: #34b8bc; }
+        color: #12a28d; }
   .patientProfile .patientInfo-Top .patientVital {
-    max-width: 33%;
-    line-height: 1.3rem;
+    max-width: 40vw;
+    line-height: 1.4rem;
     padding-left: 10px;
     padding-right: 10px;
     min-height: 57px; }
     .patientProfile .patientInfo-Top .patientVital span {
+      font-size: 0.9em;
+      font-weight: 700;
       display: inline-block;
-      margin-right: 8px; }
+      margin-right: 3px;
+      padding-right: 3px;
+      border-right: 1px solid #e1e1e1; }
+      .patientProfile .patientInfo-Top .patientVital span i {
+        text-align: center;
+        width: 20px; }
       .patientProfile .patientInfo-Top .patientVital span b {
-        color: #34b8bc; }
+        color: #12a28d; }
   .patientProfile .patientInfo-Top .moreAction {
     float: right;
     border-right: 1px solid #e1e1e1;
