--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -1,3 +1,5 @@
+@import "../../styles/algaehCssVariables.scss";
+
 .patientProfile {
   .patientInfo-Top {
     background: white;
@@ -67,46 +69,66 @@
       p {
         margin: 0;
         padding: 0;
+        font-size: 0.9em;
+        font-weight: 700;
       }
     }
     .patientDemographic {
-      line-height: 1.3rem;
+      line-height: 1.4rem;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
-      min-height: 57px;
       span {
+        font-size: 0.9em;
+        font-weight: 700;
         display: block;
+        i {
+          text-align: center;
+          width: 20px;
+        }
         b {
-          color: #34b8bc;
+          color: $primary-color;
         }
       }
     }
     .patientHospitalDetail {
-      line-height: 1.3rem;
+      line-height: 1.4rem;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
       min-height: 57px;
       span {
+        font-size: 0.9em;
+        font-weight: 700;
         display: block;
+        i {
+          text-align: center;
+          width: 20px;
+        }
         b {
-          color: #34b8bc;
+          color: $primary-color;
         }
       }
     }
     .patientVital {
-      max-width: 33%;
-      line-height: 1.3rem;
+      max-width: 40vw;
+      line-height: 1.4rem;
       padding-left: 10px;
       padding-right: 10px;
       min-height: 57px;
       span {
+        font-size: 0.9em;
+        font-weight: 700;
         display: inline-block;
-        margin-right: 8px;
-
+        margin-right: 3px;
+        padding-right: 3px;
+        border-right: 1px solid #e1e1e1;
+        i {
+          text-align: center;
+          width: 20px;
+        }
         b {
-          color: #34b8bc;
+          color: $primary-color;
         }
       }
     }
