--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
@@ -43,3 +43,24 @@
     }
   }
 }
+
+.patientRegImg {
+  .image-drop-area {
+    img {
+      height: 169px;
+    }
+  }
+  .Image-cropper {
+    top: 20vh;
+  }
+}
+.patientRegId {
+  .image-drop-area {
+    img {
+      height: 169px;
+    }
+  }
+  .Image-cropper {
+    top: 20vh;
+  }
+}
