--- a/client/src/Components/MRD/PatientMRD/patient_mrd.scss
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.scss
@@ -1,4 +1,4 @@
-@import "../../styles/algaehCssVariables.scss";
+@import "../../../styles/algaehCssVariables.scss";
 
 .patient-mrd {
   .patientProfile {
