--- a/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.css
+++ b/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.css
@@ -78,3 +78,26 @@
   .textArea .ui.input textarea {
     min-height: 200px !important;
     max-height: 200px !important; }
+
+.CanvasEditorCntr {
+  background: #cecece;
+  width: 100%;
+  height: 47vh;
+  float: left; }
+
+.DiagramRemarksCntr {
+  width: 100%;
+  float: left; }
+
+.eachDiagram {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 10px; }
+  .eachDiagram img {
+    width: 100%;
+    height: auto;
+    background: #ccc;
+    border: 1px solid #ccc; }
+  .eachDiagram p {
+    font-size: 0.9rem; }
+    .eachDiagram p small {
+      display: block; }
