--- a/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
+++ b/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
@@ -103,3 +103,29 @@
     }
   }
 }
+.CanvasEditorCntr {
+  background: #cecece;
+  width: 100%;
+  height: 47vh;
+  float: left;
+}
+.DiagramRemarksCntr {
+  width: 100%;
+  float: left;
+}
+.eachDiagram {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 10px;
+  img {
+    width: 100%;
+    height: auto;
+    background: #ccc;
+    border: 1px solid #ccc;
+  }
+  p {
+    font-size: 0.9rem;
+    small {
+      display: block;
+    }
+  }
+}
