image implemented in examination diagram

--- a/client/src/Components/Wrapper/imageEditor.scss
+++ b/client/src/Components/Wrapper/imageEditor.scss
@@ -1,4 +1,3 @@
-.tui-image-editor-container .svg_ic-menu {
-  color: white !important;
-  background: white !important;
+.image-edit-inner {
+  margin: 0 auto;
 }
