--- a/client/src/Components/Wrapper/imageEditor.css
+++ b/client/src/Components/Wrapper/imageEditor.css
@@ -1,3 +1,2 @@
-.tui-image-editor-container .svg_ic-menu {
-  color: white !important;
-  background: white !important; }
+.image-edit-inner {
+  margin: 0 auto; }
