--- a/client/src/Reports/report-style.css
+++ b/client/src/Reports/report-style.css
@@ -1,6 +1,9 @@
+.tbl-header {
+  overflow: auto; }
+
 .tbl-content {
   height: 35vh;
-  overflow-x: auto;
+  overflow: auto;
   margin-top: 0px;
   border: 1px solid #f2f2f2 !important; }
 
@@ -17,7 +20,8 @@
     color: #000 !important;
     background: #d2faf4 !important;
     border-bottom: 1px solid #17d0b5 !important;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    width: 100px; }
   .reportFixedTable tr:nth-child(even) {
     background: #f2f2f2 !important; }
   .reportFixedTable td {
@@ -26,7 +30,8 @@
     vertical-align: middle;
     font-size: 1rem;
     color: #666666 !important;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.1); }
+    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+    width: 100px; }
   .reportFixedTable ::-webkit-scrollbar {
     width: 6px; }
   .reportFixedTable ::-webkit-scrollbar-track {
