--- a/client/src/Components/AppointmentAr/AppointmentAr.scss
+++ b/client/src/Components/AppointmentAr/AppointmentAr.scss
@@ -99,6 +99,7 @@
       background: #fff;
       margin-left: 5px;
       border-radius: 5px;
+      vertical-align: top;
 
       thead {
         tr {
