--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
@@ -18,3 +18,10 @@
     margin-top: -10px; }
   .hptl-phase1-ordering-services-form #doctorOrder .ReactTable {
     height: 30vh !important; }
+
+#Services_Ordering .ReactTable {
+  height: 54vh !important; }
+
+.GridTotalDetails h5 {
+  margin-top: 0;
+  font-size: 1.3rem; }
