--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
@@ -28,3 +28,14 @@
     }
   }
 }
+#Services_Ordering {
+  .ReactTable {
+    height: 54vh !important;
+  }
+}
+.GridTotalDetails {
+  h5 {
+    margin-top: 0;
+    font-size: 1.3rem;
+  }
+}
