--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -75,7 +75,8 @@
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
     padding-right: 10px;
-    min-height: 57px; }
+    min-height: 57px;
+    max-width: 170px; }
     .patientProfile .patientInfo-Top .patientHospitalDetail span {
       font-size: 0.9em;
       font-weight: 700;
