--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -97,6 +97,7 @@
       padding-left: 10px;
       padding-right: 10px;
       min-height: 57px;
+      max-width: 170px;
       span {
         font-size: 0.9em;
         font-weight: 700;
