--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -29,16 +29,19 @@
       background-color: #eaeaea; }
       .patientProfile .patientInfo-Top .patientImg .image-drop-area img {
         height: 55px;
-        width: auto;
+        width: 55px;
         border-radius: 4px;
         overflow: hidden;
-        -webkit-transition: height 0.3s;
+        -webkit-transition: width 0.3s;
         /* For Safari 3.1 to 6.0 */
-        transition: height 0.3s;
+        transition: width 0.3s;
         border-radius: 0; }
         .patientProfile .patientInfo-Top .patientImg .image-drop-area img:hover {
-          height: 175px;
-          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); }
+          width: 175px;
+          height: auto;
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+          position: absolute;
+          z-index: 9; }
   .patientProfile .patientInfo-Top .patientName {
     max-width: 230px;
     margin-top: 2px;
