Report Scrollbar hide + nurse workbench footer btn + HIMS Logo

--- a/client/src/Components/NurseWorkbench/nurse_workbench.css
+++ b/client/src/Components/NurseWorkbench/nurse_workbench.css
@@ -1,5 +1,6 @@
 .nurse_workbench .panel-layout {
-  margin-top: 10px; }
+  margin-top: 10px;
+  margin-bottom: 50px; }
 
 .nurse_workbench .opPatientList .opList {
   margin: 0;
