--- a/client/src/Reports/report-style.css
+++ b/client/src/Reports/report-style.css
@@ -22,29 +22,38 @@
   table-layout: fixed;
   /* for custom scrollbar for webkit browser*/ }
   .reportFixedTable th {
-    padding: 5px 15px;
+    padding: 5px 5px;
     vertical-align: middle;
-    text-align: left;
+    text-align: center;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 0.8rem;
     color: #000 !important;
     background: #d2faf4 !important;
     border-bottom: 1px solid #17d0b5 !important;
     text-transform: uppercase;
-    width: 100px; }
+    width: 130px; }
   .reportFixedTable tr:nth-child(even) {
     background: #f2f2f2 !important; }
   .reportFixedTable td {
-    padding: 5px 15px;
+    padding: 5px 5px;
     text-align: left;
     vertical-align: middle;
-    font-size: 1rem;
+    font-size: 0.9rem;
     color: #666666 !important;
     border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-    width: 100px; }
+    width: 130px; }
+    .reportFixedTable td.left {
+      text-align: left; }
+    .reportFixedTable td.center {
+      text-align: center; }
+    .reportFixedTable td.right {
+      text-align: right; }
   .reportFixedTable ::-webkit-scrollbar {
     width: 6px; }
   .reportFixedTable ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
   .reportFixedTable ::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
+
+.reportFooterDetails {
+  text-align: right; }
