--- a/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.css
+++ b/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.css
@@ -54,3 +54,30 @@
       font-size: 0.9rem; }
       .diagramList .eachDiagram p small {
         display: block; }
+
+.saveWindow {
+  display: none;
+  width: 50vw;
+  -webkit-box-shadow: 10px 10px 10px #000;
+  box-shadow: 10px 10px 10px #000;
+  position: absolute;
+  top: 150px;
+  z-index: 99;
+  background: #fff;
+  left: 25%;
+  border-radius: 3px; }
+  .saveWindow .saveHeader {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.16);
+    padding-top: 12px;
+    padding-bottom: 5px;
+    margin-bottom: 10px; }
+  .saveWindow .textAreaRemarks {
+    border: 1px solid rgba(0, 0, 0, 0.16);
+    height: 100px; }
+  .saveWindow .saveFooter {
+    border-top: 1px solid rgba(0, 0, 0, 0.16);
+    padding-top: 5px;
+    padding-bottom: 5px; }
+    .saveWindow .saveFooter button {
+      float: right;
+      margin-left: 10px; }
