--- a/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
+++ b/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
@@ -67,7 +67,7 @@
   }
 }
 .saveWindow {
-  display: none;
+  // display: none;
   width: 50vw;
   -webkit-box-shadow: 10px 10px 10px #000;
   box-shadow: 10px 10px 10px #000;
@@ -80,7 +80,7 @@
   .saveHeader {
     border-bottom: 1px solid rgba(0, 0, 0, 0.16);
     padding-top: 12px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     margin-bottom: 10px;
   }
   .textAreaRemarks {
