--- a/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
+++ b/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
@@ -1,7 +1,10 @@
 .CanvasEditorCntr {
   width: 100%;
   margin-top: 20px;
-
+  .image-area-cntr {
+    top: 29vh !important;
+    left: 29vw !important;
+  }
   .tui-image-editor-container {
     width: 81.5vw !important;
     height: 75vh !important;
@@ -64,5 +67,22 @@
         display: block;
       }
     }
+  }
+}
+.diagramDropdown {
+  height: 51px;
+  img {
+    width: 50px;
+    height: 50px;
+    float: left;
+  }
+  span {
+    display: block;
+    font-size: 0.8rem;
+    margin-left: 56px;
+  }
+  span:first-child {
+    font-size: 1rem;
+    font-weight: bold;
   }
 }
